# mobilegan_cli

./: CMakeLists.txt  main.cpp  seq_main.cpp
kernels/: common.h  conv2d.cl  conv2d_exp.cl  conv2d_transpose.cl  conversion.cl  pad.cl  util.cl
parallel/: app.cpp  app.hpp  benchmark.cpp  benchmark.hpp  layers.cpp  layers.hpp  model.cpp  model.hpp  runtime.cpp  runtime.hpp  unittest.cpp  unittest.hpp
pretrain/: model.1.bias.txt  model.1.weight.txt  model.10.conv_block.1.bias.txt  model.10.conv_block.2.running_mean.txt  model.10.conv_block.2.running_var.txt  model.10.conv_block.5.bias.txt  model.10.conv_block.6.running_mean.txt  model.10.conv_block.6.running_var.txt  model.11.conv_block.1.bias.txt  model.11.conv_block.2.running_mean.txt  model.11.conv_block.2.running_var.txt  model.11.conv_block.5.bias.txt  model.11.conv_block.6.running_mean.txt  model.11.conv_block.6.running_var.txt  model.12.conv_block.1.bias.txt  model.12.conv_block.2.running_mean.txt  model.12.conv_block.2.running_var.txt  model.12.conv_block.5.bias.txt  model.12.conv_block.6.running_mean.txt  model.12.conv_block.6.running_var.txt  model.13.conv_block.1.bias.txt  model.13.conv_block.2.running_mean.txt  model.13.conv_block.2.running_var.txt  model.13.conv_block.5.bias.txt  model.13.conv_block.6.running_mean.txt  model.13.conv_block.6.running_var.txt  model.14.conv_block.1.bias.txt  model.14.conv_block.2.running_mean.txt  model.14.conv_block.2.running_var.txt  model.14.conv_block.5.bias.txt  model.14.conv_block.6.running_mean.txt  model.14.conv_block.6.running_var.txt  model.15.conv_block.1.bias.txt  (+41 more)
(+9 files in other folders)
